# AnalysisTools

./: .deepsource.toml  .gitattributes  .gitignore  AnalysisTools.c  AnalysisTools.h  CMakeLists.txt  Errors.c  Errors.h  General.c  General.h  Globals.h  MathUtils.h  Options.c  Options.h  README.md  Read.c  Read.h  ReadWrite.c  ReadWrite.h  ReadWriteField.c  ReadWriteGromacs.c  ReadWriteGromacs.h  ReadWriteLdata.c  Structs.c  Structs.h  System.c  System.h  Write.c  Write.h  profile  traj.xyz
Examples/: vtf_detailed.nfo
Examples/AddRandomToSystem/: README.txt  fig_b.vtf  fig_c.vtf  fig_e.vtf
Examples/AddToSystem/Bilayer/: Bilayer.sh
Examples/AddToSystem/Janus_particle/: script.sh
Examples/AddToSystem/Manual/: README.txt  fig_a.vtf  fig_d.vtf
Examples/AddToSystem/WireAggregate/: A5B5.FIELD  Wire.data  Wire.sh  Wire.vtf  vmd.tcl
Examples/Aggregates/: BC-avg-2.txt  BC-avg.txt  BC-distr-2.txt  BC-distr.txt  BC-gyr.txt  BC-joined.vtf  BC.agg  C-avg-2.txt  C-avg.txt  C-distr-2.txt  C-distr.txt  C.agg  CONTROL  FIELD  boop.txt  boop2.txt  join.vtf  traj.nfo  traj.vtf
Examples/AngleMolecules/sim/: traj.vsf
Examples/Info/: FIELD.nfo  README.txt  detailed.vsf  detailed_no.nfo  detailed_yes.nfo  in.FIELD  in.vtf  info.txt  opt_i-excl.nfo  opt_i.nfo  vtf.nfo  vtf_coor.nfo  vtf_detailed.nfo
Examples/Info/old/: FIELD.nfo  README.txt  in.FIELD  vtf.nfo
Examples/Selected/: README.txt  full.vtf  run.sh
Examples/Surface/: thickness.sh
Extra/: CMakeLists.txt  GalContacts.c  GalContacts2.c  LargestAgg.c  Template.c
Utility/: AddRandomToSystem.c  AddRandomToSystem.c.bkp2  AddSystemToSystem.c  AddToSystem.c  Aggregates-NotSameBeads.c  Aggregates.c  Aggregates.h  AngleMolecules.c  Average.c  BOOP.c  BondLength.c  Config.c  Config_from_xyz.c  Density2D.c  DensityAggregates.c  DensityBox.c  DensityMolecules.c  DihedralMolecules.c  DistrAgg.c  GenAnglesDihedrals.c  GenFIELD.c  GenLayers.c  GyrationAggregates.c  GyrationMolecules.c  Info.bkp.c  Info.c  JoinAggregates.c  JoinRuns.c  JoinSystems.c  Library.c  LibraryCreateFieldLmpIn.c  Local.c  NumDeriv.c  Orientation-2.c  OrientationAggregates.c  OrientationMolecules.c  P.c  PairCorrel.c  PersistenceLength.c  PotentialAggregates.c  (+13 more)
doc-latex/: AddRandomToSystem.tex  AddToSystem.tex  Aggregates.tex  AngleMolecules.tex  Average.tex  DensityBox.tex  DistrAgg.tex  Info.tex  InputFiles.tex  Introduction.tex  JoinSystems-tikz.tex  JoinSystems.tex  Local.tex  ReadSystemData.tex  Selected.tex  SelectedVcf.tex  Structs.tex  Surface.tex  Utilities.tex  VtfCheckTimestep.tex  VtfGetPbc.tex  VtfReadStruct.tex  VtfReadTimestep.tex  arrow.tex  manual.bbl  manual.bcf  manual.blg  manual.run.xml  manual.tex
doc-latex/huh/: ltex.dictionary.en-US.txt  ltex.disabledRules.en-GB.txt  ltex.hiddenFalsePositives.en-GB.txt
